test y Messages ajustados al enunciado